--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="script.js"></script>
 </head>
 <body>
-    
-    
+    <textarea id="text_area">:-) j'adore :) les :D</textarea>
+    <button name="button" id="btn">Modérer</button>
+    <p>Résultat</p>
+    <div>
+    </div>
 </body>
+<script src="script.js"></script>
 </html>
