--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <textarea id="text_area">:-) j'adore :) les :D</textarea>
-    <button name="button" id="btn">Modérer</button>
+    <button id="btn">Modérer</button>
     <p>Résultat</p>
-    <div>
+    <div id="resultat">
     </div>
 </body>
 <script src="script.js"></script>
